# Lost

./: .gitattributes  .gitignore  README.md
CTF/GeekGame 2023/: README.md
CTF/GeekGame 2025/: 7 岁的毛毛：我要写 Java-2.java  README.md  Warden++.py  北清问答-3.py  取证大师-1.js  高可信数据大屏.py  高级剪切几何-1.py
CTF/Geekgame 2024/: README.md
Games/: 1room.md  AVDirectorLife.md  Ariadne.md  BikiniArmourExplorers.md  BulletGirlsPhantasia.md  Cage of Tentacles.md  CodeValkyrie.md  DemonLord.md  Demonion.md  DungeonLegion.md  ElisetheDevil.md  EroPhoneRe.md  HeartGirlStarlight.md  HentaiPrison.md  HolyKnightRicca.md  HolyPaladinCynthia.md  IsekaiSexBoutique.md  LelieNavigation.md  LuvSic.md  MagnaFortuna.md  Memelis.md  NakedStory.md  NightmareHunter.md  PeepingDormManager.md  PrimitiveHearts.md  PrincessSacrifice.md  RebirthMrWang.md  Rignetta's Adventure.md  SEX部.md  ShadowCodeSaku.md  StripKnight.md  SuccubusSaint.md  Survive3.md  TennisAngelsEX.md  Thanatos.md  TrainGame.md  UnderTheTowerExercitus.md  XAngel.md  dohnadohna.md  island(waffle).md  (+63 more)
HPC/HPCGame 2024/: README.md
HPC/HPCGame 2024/简单的编译/: CMakeLists.txt  Makefile  README.md  hello_mpi.cpp  hello_omp.cpp
HPC/HPCGame 2025/: README.md
HPC/HPCGame 2025/C-不简单的编译/handin/: CMakeLists.txt  filter.F90  main.cpp
HPC/HPCGame 2026/: README.md
HPC/HPCGame 2026/G-显存不足/: ans  base  check.py  interact.py  prefill.py  pyproject.toml
HPC/HPCGame 2026/H-流水排排乐/kdt-compiler/: pyproject.toml  setup.py
HPC/HPCGame 2026/H-流水排排乐/kdt-compiler/kdt/: __init__.py
HPC/HPCGame 2026/H-流水排排乐/kdt-compiler/kdt/ir/: __init__.py  debug.py  errors.py  ir.py  ir_visitor.py
HPC/HPCGame 2026/H-流水排排乐/kdt-compiler/kdt/language/: __init__.py  ast_visitor.py  errors.py  frontend.py  launch.py  symbol_table.py
HPC/HPCGame 2026/H-流水排排乐/kdt-compiler/kdt/simulator/: __init__.py  execution_context.py  execution_visitor.py  simulator.py  tpu_spec.py
HPC/HPCGame 2026/H-流水排排乐/kdt-compiler/kdt/utils/: __init__.py  compare.py
HPC/HPCGame 2026/M-MapReduce SpGEMM Top-K/MapReduceSpGEMM/: .gitignore  CMakeLists.txt
HPC/HPCGame 2026/M-MapReduce SpGEMM Top-K/MapReduceSpGEMM/scripts/: gen_coo.py
HPC/HPCGame 2026/M-MapReduce SpGEMM Top-K/MapReduceSpGEMM/src/: main.cpp  spgemm copy 2.cpp  spgemm copy.cpp  spgemm.cpp  spgemm_naive.cpp  spgemm_topk.h
Maths/: matlab_Goldbach.m
Maths&Physics/: CUPT计时器.pyw  README.md  matlab_EularConst.m  电子云绘制.py
Maths&Physics/宇宙学note/: chapter_1.tex  chapter_2.tex  chapter_3.tex  chapter_4.tex  chapter_5.tex  note.tex
Maths&Physics/本科毕设论文代码/: README.md
Maths&Physics/计算物理期末/: T1.m  T2.m  T3.m  T4.m  T5.m
PH/CCBC 16/: Galileo-1.py  Galileo-Voronoi.py  Unihan_stroke.json  roll.py  (+5 more)
Tools/: README.md  arrow_puzzle.py  bmw384.py  夜神GPS修改.py
(+359 files in other folders)
